--- a/AppGui/AppGui/Pages/PresentationPage.xaml
+++ b/AppGui/AppGui/Pages/PresentationPage.xaml
@@ -12,7 +12,8 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20*" />
-            <RowDefinition Height="80*" />
+            <RowDefinition Height="70*" />
+            <RowDefinition Height="10*" />
         </Grid.RowDefinitions>
         
         <TextBlock Grid.Row="0" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="{DynamicResource HeaderFontFamily}" FontSize="{DynamicResource HeaderFontSize}">Assistente Virtual</TextBlock>
@@ -45,8 +46,12 @@
             <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Tempo</TextBlock>
 
             <Image Grid.Row="2" Grid.Column="3" gif:ImageBehavior.AnimatedSource="..\Gif\tickets.gif" />
-            <TextBlock Grid.Row="3" Grid.Column="3" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Senhas académicas</TextBlock>
+            <TextBlock Grid.Row="3" Grid.Column="3" VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="18" Margin="10,0,0,0">Senhas</TextBlock>
             
         </Grid>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Image Source="../Images/hand.PNG" Width="30" Height="50" VerticalAlignment="Stretch" HorizontalAlignment="Left" Margin="0,0,10,0"/>
+            <TextBlock VerticalAlignment="Stretch" HorizontalAlignment="Center"  FontSize="20" Margin="10,12,0,0"> Também é possivel interagir através da seleção dos items </TextBlock>
+        </StackPanel>
     </Grid>
 </Page>
